[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "johnston-calculator"
version = "0.1.0"
description = "13-limit calculator for note names in extended just intonation using Ben Johnston's system."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "Jordan Lenchitz"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
]

[project.scripts]
johnston-calc = "calculator:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["calculator.py"]
